<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMenuOption"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:text="@string/menu_options"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddCompany"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenuOption" />

    <Button
        android:id="@+id/buttonUpdateCompany"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/update_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddCompany" />

    <Button
        android:id="@+id/buttonRemoveCompany"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/remove_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdateCompany" />

    <Button
        android:id="@+id/buttonViewAllCompany"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/view_company"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemoveCompany"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>